just minor updates
git-svn-id: https://svn.mccode.org/svn/McStasTeX@27 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -100,7 +100,7 @@ Some important modifications were done to the 'Run-time' library (e.g. the funct
 \item The documentation is now included in the \verb+doc+ directory.
       \index{Library!Components!doc}
 \item Many dedicated libraries are now available as shared code for reading tables,
-    handling data files and monitors. These are C functions to be \texttt{\%includ}ed
+    handling data files and monitors. These are C functions to be \texttt{\%include}d
     into components (see e.g. \verb+MCSTAS/monitors/Monitor_nD.comp+).
     \index{Library!Components!share}
 \item Obsolete directory contains components that were renamed or old.
@@ -150,7 +150,7 @@ Some important modifications were done to the 'Run-time' library (e.g. the funct
     (see~\ref{s:new-features:run-time} changes). The former PGPLOT interface is still
     supported. 
     \index{Tools!Matlab} \index{Tools!Scilab} 
-    \index{Tools!IDL} \index{Tools!Perl libraries}
+    \index{Tools!IDL} \index{Tools!Perl libraries}   
 \item \verb+mcplot+, \verb+mcdisplay+, \verb+mcgui+ are now less dependent on the
     \verb+perl/PDL/pgplot+ installed versions. \index{Tools!mcplot}
 \item \verb+mcplot+ can plot a single simulation data file.
