New Riso-R number, ISSN, ISBN. Corrected a \label -> \ref in kernel.tex.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@30 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -465,7 +465,7 @@ component.
 This declares the definition and setting parameters of the component.
 The parameters define the characteristics of the component, and can be
 accessed from the \verb+SAVE+, \verb+FINALLY+, and \verb+MCDISPLAY+ sections (see below), 
-as well as in \verb+EXTEND+ sections of the instrument definition (see section~\label{s:instrdefs}).
+as well as in \verb+EXTEND+ sections of the instrument definition (see section~\ref{s:instrdefs}).
 \index{Parameters!Setting}
 \index{Parameters!Definition}
 
