--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -8,11 +8,11 @@ release in October 1998 of version 1.0 as presented in Ref.~\cite{nn_10_20}. The
 document is supposed to have some knowledge of neutron scattering,
 whereas only little knowledge about simulation techniques is
 required. In a few places, we also assume familiarity with the
-use of C, UNIX and of the world wide web (WWW).
+use of the C programming language and UNIX/Linux.
 
 It is a pleasure to thank Prof.~Kurt N.~Clausen for his continuous
-support to this project and for having initiated the work in the first
-place. 
+support to this project and for having initiated \MCS\ in the first
+place. Essential support has also been given by Prof.~Robert McGreevy.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
 %contributions from our test users, the students Asger Abrahamsen, Niels
@@ -31,10 +31,11 @@ community, too numerous to mention here.
 %users to contribute components with manual entries for inclusion in
 %future versions of \MCS.
 
-This project has been supported by the European Union
-through the XENNI program and the RTD ``Cool Neutrons'' and ``SCANS'' programs.
+This project has been supported by the European Union, initially
+through the ``XENNI'' network and ``Cool Neutrons'' RTD program, later
+through the ``SCANS'' network.
 
-In case of any errors, questions, suggestions, %or other need for support should arise,
+In case of any errors, questions, or suggestions, %or other need for support should arise,
 %do not hesitate to 
 contact the authors at \verb+mcstas@risoe.dk+
 or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
